--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,5 @@ Temporary Items
 *.icloud
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,intellij,java
+
+application-local.properties
