--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,11 @@ Temporary Items
 # End of https://www.toptal.com/developers/gitignore/api/macos,intellij,java
 
 application-local.properties
+
+.gradle
+
+debezium-libs/debezium-scripting-2.7.3.Final.jar
+
+docker-compose.yml
+
+./pgdata
