--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,11 @@ dependencies {
 	// Swagger 관련 의존성 추가
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
 
-	// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+	// Slf4j 로그 관련 의존성 추가
 	implementation 'org.slf4j:slf4j-api:2.0.17'
+
+	// docker compose 관련 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-docker-compose:3.4.4'
 }
 
 tasks.named('test') {
