chore: elasticsearch에 nori 분석기 plugin 포함

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,6 +114,12 @@ services:
       - "9300:9300"
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
+    # elasticsearch에 nori 분석기 plugin 포함
+    command: >
+      bash -c '
+        bin/elasticsearch-plugin install analysis-nori || true;
+        /usr/local/bin/docker-entrypoint.sh elasticsearch
+      '
 
   # Kibana - Elasticsearch 관리 및 모니터링용
   kibana:
