--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,19 @@ dependencies {
 
 	// docker compose 관련 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-docker-compose:3.4.4'
+
+	// Elasticsearch 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+
+	// MongoDB 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
+	// Kafka 의존성 추가
+	implementation 'org.springframework.kafka:spring-kafka'
+
+	// JSON 처리
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 }
 
 tasks.named('test') {
