feat: Query 모델 조회 메소드에 캐싱 적용

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,10 @@ dependencies {
 	// Kafka 의존성 추가
 	implementation 'org.springframework.kafka:spring-kafka'
 
+	// Valkey Cache 의존성 추가Add commentMore actions
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	// JSON 처리
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
